fix nav menu gap

--- a/style.scss
+++ b/style.scss
@@ -163,7 +163,7 @@ nav {
 nav::after {
  content: "";
  position: absolute;
- top: -1rem;
+ top: -0.9rem;
  right: 0;
  width: 0;
  height: 0;
@@ -288,7 +288,7 @@ nav::after {
  @media (min-width: 600px) {
   flex: 50%;
   margin: 0;
-  font-size: ;
+
   text-align: left;
   align-items: flex-start;
   padding: 3rem 0 1rem 2rem;
